# chainsail

./: .env  .envrc  .gitignore  CODEOWNERS  Makefile  README.md  docker-compose.yaml  flake.nix  normal.py  package-lock.json  package.json  pyproject.toml  setup.cfg  shell.nix
app/controller/: .gitignore  README.md  default.nix  probability.py  pyproject.toml
app/controller/chainsail/controller/: __init__.py  initial_setup.py  run.py  run_local.py  util.py
app/controller/chainsail/controller/test/: test_initial_schedules.py  test_initial_setup.py  test_job_controller.py  test_run.py
app/controller/resaas/controller/: __init__.py  initial_schedules.py  initial_setup.py  run.py  run_local.py
app/controller/resaas/controller/test/: test_initial_schedules.py  test_initial_setup.py  test_job_controller.py  test_run.py
app/mcmc_stats_server/: pyproject.toml
app/mcmc_stats_server/chainsail/mcmc_stats_server/: app.ini  app.py  wsgi.py
app/scheduler/: README.md  pyproject.toml  run_stack.sh
app/scheduler/chainsail/scheduler/: app.ini  app.py  config.py  core.py  db.py  db_util.py  jobs.py  tasks.py  utils.py  wsgi.py
app/scheduler/chainsail/scheduler/nodes/: base.py  k8s_pod.py  registry.py  vm.py
app/scheduler/chainsail/scheduler/test/: test_config.py  test_jobs.py
app/scheduler/example/: README.md  controller.yaml  docker-compose.yaml  graphite-storage-schemas.conf  pg-servers.json  scheduler.yaml  storage.yaml
app/scheduler/resaas/scheduler/: app.ini  app.py  config.py  core.py  db.py  jobs.py  nginx_config  tasks.py  wsgi.py
app/scheduler/resaas/scheduler/nodes/: base.py  mock.py  registry.py  vm.py
app/scheduler/resaas/scheduler/test/: test_config.py  test_jobs.py
app/user_code_server/: pyproject.toml
app/user_code_server/chainsail/user_code_server/: __init__.py  check_user_code.py
app/user_code_server/resaas/user_code_server/: __init__.py
app/user_code_server/resaas/user_code_service/: __init__.py
examples/use-cases/: README.md  pyproject.toml  resaas_results_local.py
examples/use-cases/line-fitting/: data.txt  make_data.py  plots.py  probability.py  sampler.py  single_chain.py  test.txt
examples/use-cases/mixture/: README.md  compare.py  plots.py  probability.py  single_chain.py
examples/use-cases/or-fitting/: README.md  compare.py  data.txt  make_data.py  plots.py  probability.py  single_chain.py
examples/use-cases/soft-kmeans/: compare.py  data.txt  make_data.py  plots.py  probability.py  show_resaas_results.py  single_chain.py
examples/use-cases/stan-mixture/: README.md  probability.py
examples/use-cases/stan-soft-k-means/: README.md  probability.py
grpc/: README.md  pyproject.toml
grpc/protos/: health-checking.proto
grpc/resaas/grpc/: __init__.py  health_checking_pb2.py  health_checking_pb2_grpc.py
lib/common/: README.md  pyproject.toml
lib/common/chainsail/common/: __init__.py  custom_logging.py  runners.py  spec.py  storage.py  tempered_distributions.py
lib/common/chainsail/common/configs/: __init__.py
lib/common/chainsail/common/pdfs/: __init__.py
lib/common/chainsail/common/samplers/: README.md  __init__.py  hmc.py  rwmc.py
lib/common/chainsail/common/tempering/: README.md  __init__.py
lib/common/chainsail/common/test/: test_hmc.py  test_spec.py  test_storage.py
lib/common/resaas/common/: __init__.py  custom_logging.py  logging.py  spec.py  storage.py  tempered_distributions.py  util.py
lib/common/resaas/common/configs/: __init__.py
lib/common/resaas/common/pdfs/: __init__.py
lib/common/resaas/common/samplers/: __init__.py  hmc.py  rwmc.py
lib/common/resaas/common/tempering/: __init__.py  ensembles.py  tempered_distributions.py
lib/common/resaas/common/test/: test_hmc.py  test_spec.py  test_storage.py  test_tempered_distributions.py
lib/grpc/: README.md  pyproject.toml
lib/grpc/chainsail/grpc/: __init__.py  health_checking_pb2.py  health_checking_pb2_grpc.py  user_code_pb2.py  user_code_pb2_grpc.py
lib/grpc/protos/: user-code.proto
lib/grpc/resaas/grpc/: __init__.py  health_checking_pb2.py  health_checking_pb2_grpc.py  user_code_pb2.py  user_code_pb2_grpc.py
lib/runners/rexfw/: README.md  pyproject.toml
lib/schedule_estimation/: README.md  pyproject.toml
lib/schedule_estimation/chainsail/schedule_estimation/: dos_estimators.py  optimization_quantities.py  schedule_optimizers.py
lib/schedule_estimation/resaas/schedule_estimation/: __init__.py  dos_estimators.py  optimization_quantities.py  schedule_optimizers.py
re_job_controller/: README.md  __init__.py  dos_calculators.py  jobspec.json  pyproject.toml  schedule_optimizers.py  test.py  util.py
re_job_controller/resaas/re_job_controller/: __init__.py  initial_schedules.py  initial_setup.py  run.py  run_local.py  util.py
re_job_controller/resaas/re_job_controller/grpc/: README.md  __init__.py  health_check.proto  health_check_pb2.py  health_check_pb2_grpc.py  status_checker.proto  status_checker_pb2.py  status_checker_pb2_grpc.py
re_job_controller/resaas/re_job_controller/test/: launch_rexfw.sh  local_test_script.py  test_initial_schedules.py  test_initial_setup.py  test_job_controller.py  test_run.py
schedule_estimation/: pyproject.toml
schedule_estimation/resaas/schedule_estimation/: dos_calculators.py  dos_energies.pickle  dos_estimators.py  optimization_quantities.py  schedule_optimizers.py  test.py
schedule_estimation/resaas/schedule_estimation/test/: pacc_numerical_integration.py  test_dos_calculators.py  test_dos_estimators.py  test_optimization_quantities.py  test_schedule_optimizers.py
scheduler/: README.md  docker-compose.yaml  pyproject.toml
scheduler/example/: README.md  controller.yaml  docker-compose.yaml  scheduler.yaml
scheduler/resaas/scheduler/: app.py  config.py  core.py  db.py  errors.py  jobs.py  spec.py  tasks.py
scheduler/resaas/scheduler/jobs/: base.py  restart.py  spec.py
scheduler/resaas/scheduler/nodes/: base.py  control.py  load.py  mock.py  vm.py
scheduler/resaas/scheduler/nodes/test/: test_vm.py
scheduler/resaas/scheduler/test/: test_config.py  test_jobs.py  test_spec.py
(+272 files in other folders)
