[tool.poetry]
name = "resaas-grpc"
version = "0.1.0"
description = "RESAAS gRPCs"
authors = ["SaeedHK <saeed.hadikhanloo@tweag.io>"]
packages = [ { include = "resaas" } ]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.35.0"
protobuf = "^3.14.0"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.35.0"
