[tool.poetry]
name = "chainsail-re-job-controller"
version = "0.1.0"
description = "Chainsail component which, within a job received from the scheduler, manages optimization and final runs"
authors = ["simeoncarstens <simeon.carstens@tweag.io>"]
packages = [ { include = 'chainsail' } ]

[tool.poetry.scripts]
chainsail-controller = 'chainsail.controller.run:run'
chainsail-controller-local = 'chainsail.controller.run_local:run'

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "*"
chainsail-common = { path = "../../lib/common", develop = true }
chainsail-grpc = { path = "../../lib/grpc", develop = true }
chainsail-schedule-optimization = { path = "../../lib/schedule_estimation", develop = true }
click = "^8.0.0"

# Runners can be installed as extras for convenience
chainsail-runner-rexfw = { path = "../../lib/runners/rexfw", optional = true, develop = true }
grpcio = "^1.35.0"
regex = "^2022.8.17"
certifi = "2023.7.22"

[tool.poetry.extras]
rexfw = ["chainsail-runner-rexfw"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

black = "22.3.0"
# Prevent build error due to invalid licence.
# See https://github.com/bagel897/pytoolconfig/commit/9655177fa82329aa772bce34da25f1ee7f321dc9
pytoolconfig = { git = "https://github.com/bagel897/pytoolconfig", rev = "9655177fa82329aa772bce34da25f1ee7f321dc9" }

flake8 = "^3.8.4"
pylint = "^2.6.0"
mypy = "^1.0.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^2.10.1"
isort = "^5.7.0"
jedi = "*"

# Commenting out rope for now as it causes a Nix build error:
# ERROR: No matching distribution found for pytoolconfig[global]>=1.2.2
# This doesn't make sense as the above pytoolconfig is version 1.2.6.dev2+g9655177.
#rope = "*"

pyyaml = "*"
numpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
env_override_existing_values = 1
env_files = [".env"]

[tool.coverage.run]
omit = ["*test*"]
