[tool.poetry]
name = "chainsail-scheduler"
version = "0.1.0"
description = "Job scheduler for chainsail"
authors = ["dorranh <dorran.howell@tweag.io>"]
packages = [ { include = 'chainsail' } ]

[tool.poetry.scripts]
scheduler-add-user = 'chainsail.scheduler.db_util:add_user'
scheduler-remove-user = 'chainsail.scheduler.db_util:remove_user'

[tool.poetry.dependencies]
python = "^3.8"
chainsail-common = { path = "../../lib/common", develop = true }
Flask = "^2.2.0"
apache-libcloud = "^3.3.0"
marshmallow = "^3.10.0"
SQLAlchemy = "^1.3.22"
psycopg2-binary = "^2.8.6"
paramiko = "^2.7.2"
Flask-SQLAlchemy = "^2.4.4"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.1"
marshmallow-enum = "^1.5.1"
PyYAML = "^6.0"
shortuuid = "^1.0.1"
celery = {extras = ["gevent", "redis"], version = "^5.0.5"}
grpcio = "^1.35.0"
chainsail-grpc = { path = "../../lib/grpc", develop = true }
firebase-admin = "^4.5.2"
uWSGI = "^2.0.20"
cloudstorage = {extras = ["google"], version = "^0.11.0"}
kubernetes = "^27.2.0"
boto3 = "^1.28.61"
setuptools = "*"
oauthlib = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "22.3.0"
flake8 = "^3.8.4"
pylint = "^2.6.0"
mypy = "^1.0.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^2.10.1"
isort = "^5.7.0"

[tool.pytest.ini_options]
minversion = "6.0"
env_override_existing_values = 1
env_files = [".env"]

[tool.coverage.run]
omit = ["*test*"]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
