[tool.poetry]
name = "resaas-user-code-service"
version = "0.1.0"
description = "RESAAS component which wraps the user code into a gRPC server"
authors = ["simeoncarstens <simeon.carstens@tweag.io>"]
packages = [ { include = 'resaas' } ]

[tool.poetry.scripts]
resaas-user-code-server = 'resaas.user_code_server:run'

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
resaas-common = { path = "../../lib/common", develop = true }
resaas-grpc = { path = "../../lib/grpc", develop = true }
click = "^7.1.2"
grpcio = "^1.35.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"
pylint = "^2.6.0"
mypy = "^0.790"
pytest-dotenv = "^0.5.2"
pytest-cov = "^2.10.1"
isort = "^5.7.0"
jedi = "*"
rope = "*"
pyyaml = "*"
numpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
env_override_existing_values = 1
env_files = [".env"]

[tool.coverage.run]
omit = ["*test*"]
