[tool.poetry]
name = "use-cases"
version = "0.1.0"
description = ""
authors = ["Simeon Carstens <simeon.carstens@tweag.io>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
numpy = "^1.20.0"
resaas-common = {path = "../../common"}
rexfw = { git = "https://github.com/tweag/rexfw", branch = "resaas" }
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
