[tool.poetry]
name = "chainsail-common"
version = "0.1.0"
description = "Chainsail code shared between components"
authors = ["simeoncarstens <simeon.carstens@tweag.io>"]
packages = [ { include = "chainsail" } ]

[tool.poetry.dependencies]
python = "^3.8"
apache-libcloud = "^3.3.1"
numpy = "^1.19.5"
PyYAML = "^6.0"
marshmallow = "^3.10.0"
marshmallow-enum = "^1.5.1"
cryptography = "^3.4.1"
# poetry is annoying. We actually need this, but it will then fail with
# a lib/grpc directory does not exist error. It works without, too,
# because luckily other components have chainsail.grpc as dependency, too.
chainsail-grpc = { path="../grpc", develop=true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "22.3.0"
flake8 = "^3.8.4"
pylint = "^2.6.0"
mypy = "^0.790"
pytest-dotenv = "^0.5.2"
pytest-cov = "^2.10.1"
isort = "^5.7.0"
jedi = "*"
rope = "*"

[tool.pytest.ini_options]
minversion = "6.0"
env_override_existing_values = 1
env_files = [".env"]

[tool.coverage.run]
omit = ["*test*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
