[tool.poetry]
name = "chainsail-schedule-optimization"
version = "0.1.0"
description = "Temperature schedule estimation for chainsail"
authors = ["simeoncarstens <simeon.carstens@tweag.io>"]
packages = [ { include = "chainsail" } ]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
chainsail-common = { path = "../common" , develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "22.3.0"
flake8 = "^3.8.4"
pylint = "^2.6.0"
mypy = "^0.790"
pytest-dotenv = "^0.5.2"
pytest-cov = "^2.10.1"
isort = "^5.7.0"
jedi = "*"
rope = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
env_override_existing_values = 1
env_files = [".env"]

[tool.coverage.run]
omit = ["*test*"]
