[tool.poetry]
name = "chainsail-runner-rexfw"
version = "0.1.0"
description = "Chainsail runner for Replica Exchange sampling with rexfw"
authors = ["simeoncarstens <simeon.carstens@tweag.io>"]
packages = [ {include = "chainsail" } ]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pyyaml = "*"
chainsail-common = { path = "../../common", develop = true }
rexfw = { git = "https://github.com/tweag/rexfw", branch = "resaas" }
# Note: Pinning mpi4py to a commit due to https://github.com/mpi4py/mpi4py/issues/160
mpi4py = { git = "https://github.com/mpi4py/mpi4py", rev = "fc20dedf73ed83acb9b5b491003f42368a1bcd1e" }
click = "^7.1.2"


[tool.poetry.scripts]
run-rexfw-mpi = 'chainsail.runners.rexfw.mpi:run_rexfw_mpi'

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"
pylint = "^2.6.0"
mypy = "^0.790"
pytest-dotenv = "^0.5.2"
pytest-cov = "^2.10.1"
isort = "^5.7.0"
jedi = "*"
rope = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
env_override_existing_values = 1
env_files = [".env"]

[tool.coverage.run]
omit = ["*test*"]
